docs/attachment/kubernetes/addon/02-ingress-controller/02-app-http-echo.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: foo-app
  labels:
    k8s-app: foo
spec:
  containers:
  - name: foo-app
    image: hub.8ops.top/third/http-echo:0.2.3
    args:
    - "-text=foo"
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  selector:
    k8s-app: foo
  ports:
  - port: 8080
    targetPort: 5678
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  labels:
    k8s-app: bar
spec:
  containers:
  - name: bar-app
    image: hub.8ops.top/third/http-echo:0.2.3
    args:
    - "-text=bar"
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
spec:
  selector:
    k8s-app: bar
  ports:
  - port: 8080
    targetPort: 5678
---
