docs/attachment/kubernetes/addon/02-ingress-controller/04-ing-external.yaml
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-external-01
  namespace: default
spec:
  ingressClassName: external
  rules:
  - host: "external.8ops.top"
    http:
      paths:
      - backend:
          service:
            name: foo-service
            port:
              number: 8080
        path: /
        pathType: Exact
      - backend:
          service:
            name: bar-service
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - external.8ops.top
    secretName: tls-external
---
